# algo

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  compile_flags.txt
.agent/workflows/: create-csp-problems.md
.cache/cmake/gcc-debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
.competition-compat/bits/: stdc++.h
CCF CSP认证/3_第38次/: 3_消息解码_decode.cpp
CCF CSP认证/round01/10_第31次/: 2_坐标变换其二_coord2.cpp  3_梯度求解_gradient.cpp
CCF CSP认证/round01/11_第30次/: 2_矩阵运算_matrix.cpp
CCF CSP认证/round01/12_第29次/: 4_星际网络II_network2.cpp  5_施肥_fertilize.cpp
CCF CSP认证/round01/13_第28次/: 5_星际网络_network.cpp
CCF CSP认证/round01/14_第27次/: 3_防疫大数据_epidemic.cpp
CCF CSP认证/round01/15_第26次/: 1_归一化处理_normalize.cpp  2_寻宝！大冒险！_treasure.cpp
CCF CSP认证/round01/16_第25次/: 1_未初始化警告_warning.cpp  2_出行计划_travel.cpp  4_通信系统管理_telecom.cpp
CCF CSP认证/round01/18_第23次/: 1_数组推导_array.cpp  4_收集卡牌_cards.cpp  5_箱根山岳险天下_hakone.cpp
CCF CSP认证/round01/19_第22次/: 2_邻域均值_neighbor.cpp  3_DHCP 服务器_dhcp.cpp
CCF CSP认证/round01/1_第40次/: 2_数字变换_transform.cpp
CCF CSP认证/round01/20_第21次/: 2_期末预测之最佳阈值_threshold.cpp
CCF CSP认证/round01/21_第20次/: 3_点亮数字人生_digital.cpp
CCF CSP认证/工具/: clean_csp_comments.py
CCF CSP认证/题目说明/: 第03次2014年12月.html  第07次2016年04月.html  第10次2017年03月.html  第11次2017年09月.html  第13次2018年03月.html  第17次2019年09月.html  第20次2020年09月.html  第30次2023年05月.html  第32次2023年12月.html  第34次2024年06月.html  第35次2024年09月.html  第36次2024年12月.html
contest_problems/: .gitignore  CMakeLists.txt  CMakePresets.json  compile_flags.txt
contest_problems/自由实践/: map自主设置排序机制.txt  set自主设置排序机制.txt  三角函数处理.txt  埃氏筛与欧拉筛模板.txt  矩阵乘法.txt  算法竞赛常见宏定义.txt  考场数据生成器.txt
contest_problems/蓝桥杯省赛B组/: cleanup.ps1
scripts/: build-current-cpp.sh
自由实践/: README.txt  二分查找函数底层逻辑.txt
蓝桥杯省赛B组/2025年/: 可分解的正整数.cpp
(+315 files in other folders)
